# Agentic_RAG

./: README.md  figma_diagram.json  index.html  knowledge_graph_complete.html  model_explanation.txt  package-lock.json  package.json  vite.config.js
Backend/: .dockerignore  .env  CACHE_TESTING_RESULTS.md  CLEANUP_PLAN.md  DEEP_AGENTIC_FLOW_ANALYSIS.md  ENHANCED_THINKING_SYSTEM.md  Explanation.md  Explanation_new.md  FOLDER_STRUCTURE.md  LANGSMITH_INTEGRATION_GUIDE.md  PYTHON_INTERPRETER_LOGGING_SUMMARY.md  README.md  RERANKER_CONFIGURATION.md  TESTING_STRATEGY.md  __init__.py  clean_test_history_fetch.py  cognitive_flow.py  cognitive_flow_agent_wrapper.py  comprehensive_test_suite.py  config.py  conversation_manager.py  debug_neo4j_queries.py  evaluation_results.csv  explanation_agentic.md  kg_response.json  knowledge_graph.py  main.py  manage_neo4j_indexes.py  prompts.py  pyproject.toml  ragas_evaluated_results.json  railway_config.py  redis_cache_clear.py  redis_cache_summary.py  requirements.txt  run_langsmith_evals.py  server.py  state.py  state_keys.py  temp_query.txt  (+19 more)
Backend/agents/: README.md  __init__.py  base_agent.py  contextual_answering_agent.py  error_handler.py  hyde_agent.py  memory_agent.py  planning_agent.py  research_orchestrator.py  retrieval_strategy_agent.py  router_agent.py  synthesis_agent.py  triage_agent.py
Backend/core/: README.md  cognitive_flow.py  cognitive_flow_agent_wrapper.py  conversation_manager.py  state.py  thinking_logger.py  thinking_workflow.py
Backend/data/: 30e61f51-eeca-46ec-93d3-9aec226d82e6.json  follow_up_test_9876.json  (+267 more)
(+127 files in other folders)
